# hlir_builder_sample

./: CMakeLists.txt  LICENSE  NOTICE  README.md  main.cpp  test.sh
common/: dtu_utils.cpp  dtu_utils.h  fp16.hpp
doc/TopsGraph API参考+用户手册/html/: client_operation_semantics.html  genindex.html  get_started.html  index.html  meta_operation_semantics.html  objects.inv  search.html  searchindex.js  tops_graph_compiler.html
doc/TopsGraph API参考+用户手册/html/_sources/: client_operation_semantics.rst.txt  get_started.rst.txt  index.rst.txt  meta_operation_semantics.rst.txt  tops_graph_compiler.rst.txt
doc/TopsGraph API参考+用户手册/html/api/: class_view_hierarchy.html  classbuilder_1_1_attribute.html  classbuilder_1_1_builder.html  classbuilder_1_1_channel_handle.html  classbuilder_1_1_conv_dimension_numbers.html  classbuilder_1_1_dimensions_layout.html  classbuilder_1_1_dot_dimension_numbers.html  classbuilder_1_1_gather_dimension_numbers.html  classbuilder_1_1_op.html  classbuilder_1_1_primitive_type.html  classbuilder_1_1_scatter_dimension_numbers.html  classbuilder_1_1_type.html  define_hlir__builder_8h_1a52c883a38e577b8b12282ff70c95a16d.html  define_hlir__builder_8h_1a79e9214914102eebedffb73c25f47fc5.html  dir_headers.html  enum_namespacebuilder_1ae3439b8a43926382d916b4d640f6c7bc.html  enum_tops__graph__compiler_8h_1a1f72ac4d0509b273a1207a92d98e9a36.html  (+329 more)
operator/: Add.h  Add_fp16.h  Add_fp16_without_convert.h  AveragePool.h  BatchNorm.h  Clip.h  Concat.h  Conv.h  Conv2D.h  Convert.h  Copy.h  DotGeneral.h  Dropout.h  Flatten.h  Gather.h  Gemm.h  GlobalAveragePool.h  Less.h  MaxPool.h  MaxPool_by_ReduceWindow.h  Mul.h  OneHot.h  Pow.h  Reciprocal.h  ReduceMean.h  Relu.h  Reshape.h  ResidualBlock.h  ResidualBlock_fp16_without_convert.h  Resize.h  Shape.h  Sigmoid.h  Slice.h  Softmax.h  Split.h  Sqrt.h  Squeeze.h  Sub.h  Tanh.h  Tile.h  (+3 more)
(+351 files in other folders)
